added post, put, and delete routes to user collection
